--- a/modules/guide_index.html
+++ b/modules/guide_index.html
@@ -38,12 +38,12 @@
   <li><a href="../modules/setup.html">setup</a></li>
   <li><a href="../modules/GuiH.API.html">GuiH.API</a></li>
   <li><a href="../modules/GuiH.MAIN_UI.html">GuiH.MAIN_UI</a></li>
-  <li><a href="../modules/guide_index.html">guide_index</a></li>
+  <li><strong>guide_index</strong></li>
   <li><a href="../modules/GuiH.manipulators.html">GuiH.manipulators</a></li>
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -80,9 +80,15 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>guide_index</code></h1>
+<p>bunch of guides to simple topics around the usage of GuiH</p>
 <p></p>
+    <h3>See also:</h3>
+    <ul>
+         <li><a href="../modules/GuiH.guide.accessing_gui_elements.html#">GuiH.guide.accessing_gui_elements</a></li>
+         <li><a href="../modules/GuiH.guide.graphic_system.html#">GuiH.guide.graphic_system</a></li>
+         <li><a href="../modules/GuiH.guide.OOP.html#">GuiH.guide.OOP</a></li>
+    </ul>
 
 
 
