--- a/modules/object_frame.html
+++ b/modules/object_frame.html
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -63,7 +63,7 @@
   <li><a href="../modules/object_button.html">object_button</a></li>
   <li><a href="../modules/object_circle.html">object_circle</a></li>
   <li><a href="../modules/object_ellipse.html">object_ellipse</a></li>
-  <li><a href="../modules/object_frame.html">object_frame</a></li>
+  <li><strong>object_frame</strong></li>
   <li><a href="../modules/GuiH.object_properties.html">GuiH.object_properties</a></li>
   <li><a href="../modules/object_group.html">object_group</a></li>
   <li><a href="../modules/object_inputbox.html">object_inputbox</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>object_frame</code></h1>
+<p>The frame object Properties</p>
 <p></p>
 
 
