--- a/modules/object_index.html
+++ b/modules/object_index.html
@@ -40,10 +40,10 @@
   <li><a href="../modules/GuiH.MAIN_UI.html">GuiH.MAIN_UI</a></li>
   <li><a href="../modules/guide_index.html">guide_index</a></li>
   <li><a href="../modules/GuiH.manipulators.html">GuiH.manipulators</a></li>
-  <li><a href="../modules/object_index.html">object_index</a></li>
+  <li><strong>object_index</strong></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -80,9 +80,26 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
-<p></p>
+<h1>Module <code>object_index</code></h1>
+<p>list of all the objects in GuiH</p>
+<p> all objects have some values same you can find them here as they are not mentioned in individual objects <a href="../modules/GuiH.object_properties.html#">GuiH.object_properties</a>
+</p>
+    <h3>See also:</h3>
+    <ul>
+         <li><a href="../modules/object_button.html#">object_button</a></li>
+         <li><a href="../modules/object_switch.html#">object_switch</a></li>
+         <li><a href="../modules/object_text.html#">object_text</a></li>
+         <li><a href="../modules/object_group.html#">object_group</a></li>
+         <li><a href="../modules/object_frame.html#">object_frame</a></li>
+         <li><a href="../modules/object_inputbox.html#">object_inputbox</a></li>
+         <li><a href="../modules/object_progressbar.html#">object_progressbar</a></li>
+         <li><a href="../modules/object_rectangle.html#">object_rectangle</a></li>
+         <li><a href="../modules/object_circle.html#">object_circle</a></li>
+         <li><a href="../modules/object_ellipse.html#">object_ellipse</a></li>
+         <li><a href="../modules/object_triangle.html#">object_triangle</a></li>
+         <li><a href="../modules/object_script.html#">object_script</a></li>
+         <li><a href="../modules/object_scrollbox.html#">object_scrollbox</a></li>
+    </ul>
 
 
 
