--- a/modules/GuiH.guide.OOP.html
+++ b/modules/GuiH.guide.OOP.html
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -56,7 +56,7 @@
   <li><a href="../modules/GuiH.lib.text.html">GuiH.lib.text</a></li>
   <li><a href="../modules/GuiH.presets.rect.html">GuiH.presets.rect</a></li>
   <li><a href="../modules/GuiH.presets.tex.html">GuiH.presets.tex</a></li>
-  <li><a href="../modules/GuiH.guide.OOP.html">GuiH.guide.OOP</a></li>
+  <li><strong>GuiH.guide.OOP</strong></li>
   <li><a href="../modules/GuiH.guide.accessing_gui_elements.html">GuiH.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/GuiH.guide.graphic_system.html">GuiH.guide.graphic_system</a></li>
   <li><a href="../modules/object_.html">object_</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>GuiH.guide.OOP</code></h1>
+<p>example of a good way to do OOP with GuiH</p>
 <p></p>
 
 
