--- a/modules/GuiH.object_properties.html
+++ b/modules/GuiH.object_properties.html
@@ -31,6 +31,10 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
+<h2>Contents</h2>
+<ul>
+<li><a href="#Tables">Tables</a></li>
+</ul>
 
 
 <h2>Modules</h2>
@@ -43,7 +47,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -64,7 +68,7 @@
   <li><a href="../modules/object_circle.html">object_circle</a></li>
   <li><a href="../modules/object_ellipse.html">object_ellipse</a></li>
   <li><a href="../modules/object_frame.html">object_frame</a></li>
-  <li><a href="../modules/GuiH.object_properties.html">GuiH.object_properties</a></li>
+  <li><strong>GuiH.object_properties</strong></li>
   <li><a href="../modules/object_group.html">object_group</a></li>
   <li><a href="../modules/object_inputbox.html">object_inputbox</a></li>
   <li><a href="../modules/object_progressbar.html">object_progressbar</a></li>
@@ -80,16 +84,69 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
-<p></p>
+<h1>Module <code>GuiH.object_properties</code></h1>
+<p>here are shown properties that every object has.</p>
+<p>
+ most of these properties are optional !</p>
 
 
+<h2><a href="#Tables">Tables</a></h2>
+<table class="function_list">
+	<tr>
+	<td class="name" nowrap><a href="#properties">properties</a></td>
+	<td class="summary">GENERIC OBJECT PROPERTIES</td>
+	</tr>
+</table>
 
 <br/>
 <br/>
 
 
+    <h2 class="section-header "><a name="Tables"></a>Tables</h2>
+
+    <dl class="function">
+    <dt>
+    <a name = "properties"></a>
+    <strong>properties</strong>
+    </dt>
+    <dd>
+    GENERIC OBJECT PROPERTIES
+
+
+    <h3>Fields:</h3>
+    <ul>
+        <li><span class="parameter">name</span>
+         [string] the name of the object that can be used to access it later
+        </li>
+        <li><span class="parameter">visible</span>
+         [boolean] should the objects graphic.lua file get ran. in other words should the object get drawn
+        </li>
+        <li><span class="parameter">reactive</span>
+         [boolean] should this objects logic.lua file get ran. in other words should the object be responsive
+        </li>
+        <li><span class="parameter">react_to_events</span>
+         [table] a lookup table with the events that this object should respond to
+        </li>
+        <li><span class="parameter">btn</span>
+         [table] a look up table with all the mouse buttons this object should respond to (labeled with ids. so {false,true} will have it only respond to right click)
+        </li>
+        <li><span class="parameter">order</span>
+         [number] the general update order for this object
+        </li>
+        <li><span class="parameter">logic_order</span>
+         [number] the order for the logic.lua file to update. higher means later
+        </li>
+        <li><span class="parameter">graphic_order</span>
+         [number] the order for the graphic.lua file to update. lets say you want a button to be on top of a square. there are 2 solutions. you can make squares graphic_order lower or buttons graphic_order higher
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+</dl>
 
 
 </div> <!-- id="content" -->
