--- a/modules/object_.html
+++ b/modules/object_.html
@@ -31,6 +31,10 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
+<h2>Contents</h2>
+<ul>
+<li><a href="#Tables">Tables</a></li>
+</ul>
 
 
 <h2>Modules</h2>
@@ -43,7 +47,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -59,7 +63,7 @@
   <li><a href="../modules/GuiH.guide.OOP.html">GuiH.guide.OOP</a></li>
   <li><a href="../modules/GuiH.guide.accessing_gui_elements.html">GuiH.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/GuiH.guide.graphic_system.html">GuiH.guide.graphic_system</a></li>
-  <li><a href="../modules/object_.html">object_</a></li>
+  <li><strong>object_</strong></li>
   <li><a href="../modules/object_button.html">object_button</a></li>
   <li><a href="../modules/object_circle.html">object_circle</a></li>
   <li><a href="../modules/object_ellipse.html">object_ellipse</a></li>
@@ -80,16 +84,49 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
-<p></p>
+<h1>Module <code>object_</code></h1>
+<p>Properties of the <type> object
+ most of these properties are optional !</p>
+<p>desc
+</p>
 
 
+<h2><a href="#Tables">Tables</a></h2>
+<table class="function_list">
+	<tr>
+	<td class="name" nowrap><a href="#properties">properties</a></td>
+	<td class="summary"><type> OBJECT PROPERTIES</td>
+	</tr>
+</table>
 
 <br/>
 <br/>
 
 
+    <h2 class="section-header "><a name="Tables"></a>Tables</h2>
+
+    <dl class="function">
+    <dt>
+    <a name = "properties"></a>
+    <strong>properties</strong>
+    </dt>
+    <dd>
+    <type> OBJECT PROPERTIES
+
+
+    <h3>Fields:</h3>
+    <ul>
+        <li><span class="parameter">field_name</span>
+         [type] field_info
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+</dl>
 
 
 </div> <!-- id="content" -->
