--- a/modules/object_group.html
+++ b/modules/object_group.html
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -65,7 +65,7 @@
   <li><a href="../modules/object_ellipse.html">object_ellipse</a></li>
   <li><a href="../modules/object_frame.html">object_frame</a></li>
   <li><a href="../modules/GuiH.object_properties.html">GuiH.object_properties</a></li>
-  <li><a href="../modules/object_group.html">object_group</a></li>
+  <li><strong>object_group</strong></li>
   <li><a href="../modules/object_inputbox.html">object_inputbox</a></li>
   <li><a href="../modules/object_progressbar.html">object_progressbar</a></li>
   <li><a href="../modules/object_rectangle.html">object_rectangle</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>object_group</code></h1>
+<p>The group object Properties</p>
 <p></p>
 
 
