--- a/modules/object_rectangle.html
+++ b/modules/object_rectangle.html
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -68,7 +68,7 @@
   <li><a href="../modules/object_group.html">object_group</a></li>
   <li><a href="../modules/object_inputbox.html">object_inputbox</a></li>
   <li><a href="../modules/object_progressbar.html">object_progressbar</a></li>
-  <li><a href="../modules/object_rectangle.html">object_rectangle</a></li>
+  <li><strong>object_rectangle</strong></li>
   <li><a href="../modules/object_script.html">object_script</a></li>
   <li><a href="../modules/object_scrollbox.html">object_scrollbox</a></li>
   <li><a href="../modules/object_switch.html">object_switch</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>object_rectangle</code></h1>
+<p>The rectangle object Properties</p>
 <p></p>
 
 
