--- a/modules/object_switch.html
+++ b/modules/object_switch.html
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -71,7 +71,7 @@
   <li><a href="../modules/object_rectangle.html">object_rectangle</a></li>
   <li><a href="../modules/object_script.html">object_script</a></li>
   <li><a href="../modules/object_scrollbox.html">object_scrollbox</a></li>
-  <li><a href="../modules/object_switch.html">object_switch</a></li>
+  <li><strong>object_switch</strong></li>
   <li><a href="../modules/object_text.html">object_text</a></li>
   <li><a href="../modules/object_triangle.html">object_triangle</a></li>
 </ul>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
+<h1>Module <code>object_switch</code></h1>
+<p>The switch object Properties</p>
 <p></p>
 
 
