--- a/modules/setup.html
+++ b/modules/setup.html
@@ -35,7 +35,7 @@
 
 <h2>Modules</h2>
 <ul class="nowrap">
-  <li><a href="../modules/setup.html">setup</a></li>
+  <li><strong>setup</strong></li>
   <li><a href="../modules/GuiH.API.html">GuiH.API</a></li>
   <li><a href="../modules/GuiH.MAIN_UI.html">GuiH.MAIN_UI</a></li>
   <li><a href="../modules/guide_index.html">guide_index</a></li>
@@ -43,7 +43,7 @@
   <li><a href="../modules/object_index.html">object_index</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
-  <li><strong>GuiH.lib.algo</strong></li>
+  <li><a href="../modules/GuiH.lib.algo.html">GuiH.lib.algo</a></li>
   <li><a href="../modules/GuiH.lib.blbfor.html">GuiH.lib.blbfor</a></li>
   <li><a href="../modules/GuiH.lib.fuzzy_find.html">GuiH.lib.fuzzy_find</a></li>
   <li><a href="../modules/GuiH.lib.general.html">GuiH.lib.general</a></li>
@@ -80,9 +80,32 @@
 
 <div id="content">
 
-<h1>Module <code>GuiH.lib.algo</code></h1>
-<p>Api used for shape drawing purposes</p>
-<p></p>
+<h1>Module <code>setup</code></h1>
+<p>What is GuiH</p>
+<p>
+ GuiH is my Object based GuiH api including powerful graphics and multitasking support
+<p> to setup the api first thing you need to do is install it
+ for development its reccomended to use this version
+ wget run https://github.com/9551-Dev/programs/raw/main/guih_install.lua
+<p> as for the final resulting program when there are no errors and no need for logs
+ i reccomend you install the single file version to save space
+ wget https://github.com/9551-Dev/apis/raw/main/GuiH.lua
+<p> for starting out i reccomend 3 files</p>
+    <h3>See also:</h3>
+    <ul>
+         <li><a href="../modules/GuiH.API.html#">GuiH.API</a></li>
+         <li><a href="../modules/GuiH.MAIN_UI.html#">GuiH.MAIN_UI</a></li>
+         <li><a href="../modules/object_index.html#">object_index</a></li>
+         <li><a href="../modules/guide_index.html#">guide_index</a></li>
+    </ul>
+    <h3>Usage:</h3>
+    <ul>
+        <pre class="example">local api = require &quot;GuiH&quot;
+local gui = api.new(term.current())
+-- add objects into gui
+gui.execute()
+</pre>
+    </ul>
 
 
 
