made objects more sensible and fixed small issues

--- a/modules/guih.lib.algox.html
+++ b/modules/guih.lib.algox.html
@@ -46,10 +46,10 @@
   <li><a href="../modules/guih.guide.OOP.html">guih.guide.OOP</a></li>
   <li><a href="../modules/guih.guide.accessing_gui_elements.html">guih.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/guih.guide.graphic_system.html">guih.guide.graphic_system</a></li>
-  <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
+  <li><strong>guih.lib.algox</strong></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
+<h1>Module <code>guih.lib.algox</code></h1>
+<p>Api used for shape drawing purposes</p>
 <p></p>
 
 
