--- a/modules/object..html
+++ b/modules/object..html
@@ -31,6 +31,10 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
+<h2>Contents</h2>
+<ul>
+<li><a href="#Tables">Tables</a></li>
+</ul>
 
 
 <h2>Modules</h2>
@@ -49,7 +53,7 @@
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -59,7 +63,7 @@
   <li><a href="../modules/guih.lib.text.html">guih.lib.text</a></li>
   <li><a href="../modules/guih.presets.rect.html">guih.presets.rect</a></li>
   <li><a href="../modules/guih.presets.tex.html">guih.presets.tex</a></li>
-  <li><a href="../modules/object..html">object.</a></li>
+  <li><strong>object.</strong></li>
   <li><a href="../modules/object.button.html">object.button</a></li>
   <li><a href="../modules/object.circle.html">object.circle</a></li>
   <li><a href="../modules/object.ellipse.html">object.ellipse</a></li>
@@ -80,16 +84,49 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
-<p></p>
+<h1>Module <code>object.</code></h1>
+<p>Properties of the <type> object
+ most of these properties are optional !</p>
+<p>desc
+</p>
 
 
+<h2><a href="#Tables">Tables</a></h2>
+<table class="function_list">
+	<tr>
+	<td class="name" nowrap><a href="#properties">properties</a></td>
+	<td class="summary"><type> OBJECT PROPERTIES</td>
+	</tr>
+</table>
 
 <br/>
 <br/>
 
 
+    <h2 class="section-header "><a name="Tables"></a>Tables</h2>
+
+    <dl class="function">
+    <dt>
+    <a name = "properties"></a>
+    <strong>properties</strong>
+    </dt>
+    <dd>
+    <type> OBJECT PROPERTIES
+
+
+    <h3>Fields:</h3>
+    <ul>
+        <li><span class="parameter">field_name</span>
+         [type] field_info
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+</dl>
 
 
 </div> <!-- id="content" -->
