--- a/modules/object.triangle.html
+++ b/modules/object.triangle.html
@@ -49,7 +49,7 @@
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -73,15 +73,15 @@
   <li><a href="../modules/object.scrollbox.html">object.scrollbox</a></li>
   <li><a href="../modules/object.switch.html">object.switch</a></li>
   <li><a href="../modules/object.text.html">object.text</a></li>
-  <li><a href="../modules/object.triangle.html">object.triangle</a></li>
+  <li><strong>object.triangle</strong></li>
 </ul>
 
 </div>
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
+<h1>Module <code>object.triangle</code></h1>
+<p>The triangle object Properties</p>
 <p></p>
 
 
