--- a/modules/guih.base_object_properties.html
+++ b/modules/guih.base_object_properties.html
@@ -31,6 +31,10 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
+<h2>Contents</h2>
+<ul>
+<li><a href="#Tables">Tables</a></li>
+</ul>
 
 
 <h2>Modules</h2>
@@ -49,7 +53,7 @@
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -64,7 +68,7 @@
   <li><a href="../modules/object.circle.html">object.circle</a></li>
   <li><a href="../modules/object.ellipse.html">object.ellipse</a></li>
   <li><a href="../modules/object.frame.html">object.frame</a></li>
-  <li><a href="../modules/guih.base_object_properties.html">guih.base_object_properties</a></li>
+  <li><strong>guih.base_object_properties</strong></li>
   <li><a href="../modules/object.group.html">object.group</a></li>
   <li><a href="../modules/object.inputbox.html">object.inputbox</a></li>
   <li><a href="../modules/object.progressbar.html">object.progressbar</a></li>
@@ -80,16 +84,69 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
-<p></p>
+<h1>Module <code>guih.base_object_properties</code></h1>
+<p>here are shown properties that every object has.</p>
+<p>
+ most of these properties are optional !</p>
 
 
+<h2><a href="#Tables">Tables</a></h2>
+<table class="function_list">
+	<tr>
+	<td class="name" nowrap><a href="#properties">properties</a></td>
+	<td class="summary">GENERIC OBJECT PROPERTIES</td>
+	</tr>
+</table>
 
 <br/>
 <br/>
 
 
+    <h2 class="section-header "><a name="Tables"></a>Tables</h2>
+
+    <dl class="function">
+    <dt>
+    <a name = "properties"></a>
+    <strong>properties</strong>
+    </dt>
+    <dd>
+    GENERIC OBJECT PROPERTIES
+
+
+    <h3>Fields:</h3>
+    <ul>
+        <li><span class="parameter">name</span>
+         [string] the name of the object that can be used to access it later
+        </li>
+        <li><span class="parameter">visible</span>
+         [boolean] should the objects graphic.lua file get ran. in other words should the object get drawn
+        </li>
+        <li><span class="parameter">reactive</span>
+         [boolean] should this objects logic.lua file get ran. in other words should the object be responsive
+        </li>
+        <li><span class="parameter">react_to_events</span>
+         [table] a lookup table with the events that this object should respond to
+        </li>
+        <li><span class="parameter">btn</span>
+         [table] a look up table with all the mouse buttons this object should respond to (labeled with ids. so {false,true} will have it only respond to right click)
+        </li>
+        <li><span class="parameter">order</span>
+         [number] the general update order for this object
+        </li>
+        <li><span class="parameter">logic_order</span>
+         [number] the order for the logic.lua file to update. higher means later
+        </li>
+        <li><span class="parameter">graphic_order</span>
+         [number] the order for the graphic.lua file to update. lets say you want a button to be on top of a square. there are 2 solutions. you can make squares graphic_order lower or buttons graphic_order higher
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+</dl>
 
 
 </div> <!-- id="content" -->
