--- a/modules/object.circle.html
+++ b/modules/object.circle.html
@@ -49,7 +49,7 @@
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -61,7 +61,7 @@
   <li><a href="../modules/guih.presets.tex.html">guih.presets.tex</a></li>
   <li><a href="../modules/object..html">object.</a></li>
   <li><a href="../modules/object.button.html">object.button</a></li>
-  <li><a href="../modules/object.circle.html">object.circle</a></li>
+  <li><strong>object.circle</strong></li>
   <li><a href="../modules/object.ellipse.html">object.ellipse</a></li>
   <li><a href="../modules/object.frame.html">object.frame</a></li>
   <li><a href="../modules/guih.base_object_properties.html">guih.base_object_properties</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
+<h1>Module <code>object.circle</code></h1>
+<p>The circle object Properties</p>
 <p></p>
 
 
