--- a/modules/object.rectangle.html
+++ b/modules/object.rectangle.html
@@ -49,7 +49,7 @@
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
-  <li><strong>guih.lib.general</strong></li>
+  <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
   <li><a href="../modules/guih.lib.graphic.html">guih.lib.graphic</a></li>
   <li><a href="../modules/guih.lib.log.html">guih.lib.log</a></li>
   <li><a href="../modules/guih.lib.ppm.html">guih.lib.ppm</a></li>
@@ -68,7 +68,7 @@
   <li><a href="../modules/object.group.html">object.group</a></li>
   <li><a href="../modules/object.inputbox.html">object.inputbox</a></li>
   <li><a href="../modules/object.progressbar.html">object.progressbar</a></li>
-  <li><a href="../modules/object.rectangle.html">object.rectangle</a></li>
+  <li><strong>object.rectangle</strong></li>
   <li><a href="../modules/object.script.html">object.script</a></li>
   <li><a href="../modules/object.scrollbox.html">object.scrollbox</a></li>
   <li><a href="../modules/object.switch.html">object.switch</a></li>
@@ -80,8 +80,8 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.general</code></h1>
-<p>a lot of unrelated functions and generaly useful functions</p>
+<h1>Module <code>object.rectangle</code></h1>
+<p>The rectangle object Properties</p>
 <p></p>
 
 
