sorted objects alphabeticaly and added better names for indexes

--- a/modules/guides.html
+++ b/modules/guides.html
@@ -38,13 +38,13 @@
   <li><a href="../modules/setup.html">setup</a></li>
   <li><a href="../modules/guih.api.html">guih.api</a></li>
   <li><a href="../modules/guih.main_ui.html">guih.main_ui</a></li>
-  <li><a href="../modules/guides.html">guides</a></li>
+  <li><strong>guides</strong></li>
   <li><a href="../modules/objects.html">objects</a></li>
   <li><a href="../modules/guih.manipulators.html">guih.manipulators</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
   <li><a href="../modules/guih.guide.OOP.html">guih.guide.OOP</a></li>
-  <li><strong>guih.guide.accessing_gui_elements</strong></li>
+  <li><a href="../modules/guih.guide.accessing_gui_elements.html">guih.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/guih.guide.graphic_system.html">guih.guide.graphic_system</a></li>
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
@@ -80,9 +80,15 @@
 
 <div id="content">
 
-<h1>Module <code>guih.guide.accessing_gui_elements</code></h1>
-<p>showcase of how to access the gui elements using the MAIN_UI.elements table</p>
+<h1>Module <code>guides</code></h1>
+<p>bunch of guides to simple topics around the usage of GuiH</p>
 <p></p>
+    <h3>See also:</h3>
+    <ul>
+         <li><a href="../modules/guih.guide.OOP.html#">guih.guide.OOP</a></li>
+         <li><a href="../modules/guih.guide.accessing_gui_elements.html#">guih.guide.accessing_gui_elements</a></li>
+         <li><a href="../modules/guih.guide.graphic_system.html#">guih.guide.graphic_system</a></li>
+    </ul>
 
 
 
