--- a/modules/objects.html
+++ b/modules/objects.html
@@ -39,12 +39,12 @@
   <li><a href="../modules/guih.api.html">guih.api</a></li>
   <li><a href="../modules/guih.main_ui.html">guih.main_ui</a></li>
   <li><a href="../modules/guides.html">guides</a></li>
-  <li><a href="../modules/objects.html">objects</a></li>
+  <li><strong>objects</strong></li>
   <li><a href="../modules/guih.manipulators.html">guih.manipulators</a></li>
   <li><a href="../modules/modules.html">modules</a></li>
   <li><a href="../modules/presets.html">presets</a></li>
   <li><a href="../modules/guih.guide.OOP.html">guih.guide.OOP</a></li>
-  <li><strong>guih.guide.accessing_gui_elements</strong></li>
+  <li><a href="../modules/guih.guide.accessing_gui_elements.html">guih.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/guih.guide.graphic_system.html">guih.guide.graphic_system</a></li>
   <li><a href="../modules/guih.lib.algox.html">guih.lib.algox</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
@@ -80,9 +80,26 @@
 
 <div id="content">
 
-<h1>Module <code>guih.guide.accessing_gui_elements</code></h1>
-<p>showcase of how to access the gui elements using the MAIN_UI.elements table</p>
-<p></p>
+<h1>Module <code>objects</code></h1>
+<p>list of all the objects in GuiH</p>
+<p> all objects have some values same you can find them here as they are not mentioned in individual objects <a href="../modules/guih.base_object_properties.html#">guih.base_object_properties</a>
+</p>
+    <h3>See also:</h3>
+    <ul>
+         <li><a href="../modules/object.button.html#">object.button</a></li>
+         <li><a href="../modules/object.circle.html#">object.circle</a></li>
+         <li><a href="../modules/object.ellipse.html#">object.ellipse</a></li>
+         <li><a href="../modules/object.frame.html#">object.frame</a></li>
+         <li><a href="../modules/object.group.html#">object.group</a></li>
+         <li><a href="../modules/object.inputbox.html#">object.inputbox</a></li>
+         <li><a href="../modules/object.progressbar.html#">object.progressbar</a></li>
+         <li><a href="../modules/object.rectangle.html#">object.rectangle</a></li>
+         <li><a href="../modules/object.script.html#">object.script</a></li>
+         <li><a href="../modules/object.scrollbox.html#">object.scrollbox</a></li>
+         <li><a href="../modules/object.switch.html#">object.switch</a></li>
+         <li><a href="../modules/object.text.html#">object.text</a></li>
+         <li><a href="../modules/object.triangle.html#">object.triangle</a></li>
+    </ul>
 
 
 
