--- a/modules/guih.html
+++ b/modules/guih.html
@@ -34,13 +34,14 @@
 <h2>Contents</h2>
 <ul>
 <li><a href="#Functions">Functions</a></li>
+<li><a href="#Tables">Tables</a></li>
 </ul>
 
 
 <h2>Modules</h2>
 <ul class="nowrap">
   <li><a href="../modules/setup.html">setup</a></li>
-  <li><a href="../modules/guih.html">guih</a></li>
+  <li><strong>guih</strong></li>
   <li><a href="../modules/guih.main_ui.html">guih.main_ui</a></li>
   <li><a href="../modules/guides.html">guides</a></li>
   <li><a href="../modules/objects.html">objects</a></li>
@@ -51,7 +52,7 @@
   <li><a href="../modules/guih.guide.accessing_gui_elements.html">guih.guide.accessing_gui_elements</a></li>
   <li><a href="../modules/guih.guide.multiple_files.html">guih.guide.multiple_files</a></li>
   <li><a href="../modules/guih.guide.sprites.html">guih.guide.sprites</a></li>
-  <li><strong>guih.lib.algo</strong></li>
+  <li><a href="../modules/guih.lib.algo.html">guih.lib.algo</a></li>
   <li><a href="../modules/guih.lib.blbfor.html">guih.lib.blbfor</a></li>
   <li><a href="../modules/guih.lib.fuzzy_find.html">guih.lib.fuzzy_find</a></li>
   <li><a href="../modules/guih.lib.general.html">guih.lib.general</a></li>
@@ -86,28 +87,41 @@
 
 <div id="content">
 
-<h1>Module <code>guih.lib.algo</code></h1>
-<p>Library used for drawing shape and getting points in various shapes.</p>
-<p> mostly used for visual things</p>
+<h1>Module <code>guih</code></h1>
+<p>The Main module</p>
+<p></p>
 
 
 <h2><a href="#Functions">Functions</a></h2>
 <table class="function_list">
 	<tr>
-	<td class="name" nowrap><a href="#get_elipse_points">get_elipse_points (horizontal_radius, vertical_radius, x, y, filled)</a></td>
-	<td class="summary">returns all pixels you need to draw an ellipse</td>
+	<td class="name" nowrap><a href="#new">new (terminal[, event_offset_x[, event_offset_y]])</a></td>
+	<td class="summary">Make a new Gui object with the given terminal/window
+ and optionaly event offset</td>
 	</tr>
 	<tr>
-	<td class="name" nowrap><a href="#get_triangle_points">get_triangle_points (p1, p2, p3)</a></td>
-	<td class="summary">returns all the pixels you need to draw a triangle</td>
+	<td class="name" nowrap><a href="#create_gui">create_gui ()</a></td>
+	<td class="summary">Alias for guih.new</td>
 	</tr>
 	<tr>
-	<td class="name" nowrap><a href="#get_triangle_outline_points">get_triangle_outline_points (p1, p2, p3)</a></td>
-	<td class="summary">returns all the pixels you need to draw outline of an triangle</td>
+	<td class="name" nowrap><a href="#load_texture">load_texture (path)</a></td>
+	<td class="summary">Used for loading basic textures
+ similiar to the nimg format</td>
 	</tr>
 	<tr>
-	<td class="name" nowrap><a href="#get_line_points">get_line_points (start_x, start_y, end_x, end_y)</a></td>
-	<td class="summary">returns all pixels you need to draw a line</td>
+	<td class="name" nowrap><a href="#convert_event">convert_event (event)</a></td>
+	<td class="summary">Processes an event into a more usable format</td>
+	</tr>
+</table>
+<h2><a href="#Tables">Tables</a></h2>
+<table class="function_list">
+	<tr>
+	<td class="name" nowrap><a href="#apis">apis</a></td>
+	<td class="summary">All of the additional GuiH apis loaded</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#presets">presets</a></td>
+	<td class="summary">All of the additional GuiH presets loaded</td>
 	</tr>
 </table>
 
@@ -119,34 +133,29 @@
 
     <dl class="function">
     <dt>
-    <a name = "get_elipse_points"></a>
-    <strong>get_elipse_points (horizontal_radius, vertical_radius, x, y, filled)</strong>
+    <a name = "new"></a>
+    <strong>new (terminal[, event_offset_x[, event_offset_y]])</strong>
     </dt>
     <dd>
-    returns all pixels you need to draw an ellipse
+    Make a new Gui object with the given terminal/window
+ and optionaly event offset
 
 
     <h3>Parameters:</h3>
     <ul>
-        <li><span class="parameter">horizontal_radius</span>
-            <span class="types"><span class="type">number</span></span>
-         horizontal radius of the ellipse
+        <li><span class="parameter">terminal</span>
+            <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+         term/window object
         </li>
-        <li><span class="parameter">vertical_radius</span>
+        <li><span class="parameter">event_offset_x</span>
             <span class="types"><span class="type">number</span></span>
-         vertical radius of the ellipse
+         sets the horizontal offset of all events
+         (<em>optional</em>)
         </li>
-        <li><span class="parameter">x</span>
+        <li><span class="parameter">event_offset_y</span>
             <span class="types"><span class="type">number</span></span>
-         x coordinate of the center of the ellipse
-        </li>
-        <li><span class="parameter">y</span>
-            <span class="types"><span class="type">number</span></span>
-         y coordinate of the center of the ellipse
-        </li>
-        <li><span class="parameter">filled</span>
-            <span class="types"><span class="type">boolean</span></span>
-         whether the ellipse should be filled or not
+         sets the vertical offset of all events
+         (<em>optional</em>)
         </li>
     </ul>
 
@@ -154,119 +163,134 @@
     <ol>
 
            <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
-        a table of all pixels you need to draw the ellipse
+        guih.main_ui
+    </ol>
+
+
+
+    <h3>Usage:</h3>
+    <ul>
+        <pre class="example"><span class="keyword">local</span> GuiH = <span class="global">require</span>(<span class="string">"GuiH"</span>)
+<span class="keyword">local</span> gui = guih.new(term.current())
+<span class="global">print</span>(gui)</pre>
+    </ul>
+
+</dd>
+    <dt>
+    <a name = "create_gui"></a>
+    <strong>create_gui ()</strong>
+    </dt>
+    <dd>
+    Alias for guih.new
+
+
+
+
+
+    <h3>See also:</h3>
+    <ul>
+         <a href="../modules/guih.html#new">guih.new</a>
+    </ul>
+
+
+</dd>
+    <dt>
+    <a name = "load_texture"></a>
+    <strong>load_texture (path)</strong>
+    </dt>
+    <dd>
+    Used for loading basic textures
+ similiar to the nimg format
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">path</span>
+            <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.4">string/table</a></span>
+         Path to the texture or the texture data in a table
+        </li>
+    </ul>
+
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+        guih.texture
+    </ol>
+
+
+
+    <h3>Usage:</h3>
+    <ul>
+        <pre class="example"><span class="keyword">local</span> GuiH = <span class="global">require</span>(<span class="string">"GuiH"</span>)
+<span class="keyword">local</span> texture = guih.load_texture({})
+<span class="global">print</span>(texture)</pre>
+    </ul>
+
+</dd>
+    <dt>
+    <a name = "convert_event"></a>
+    <strong>convert_event (event)</strong>
+    </dt>
+    <dd>
+    Processes an event into a more usable format
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">event</span>
+         all of the events results unpacked
+        </li>
+    </ul>
+
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
+        guih.event
     </ol>
 
 
 
 
 </dd>
+</dl>
+    <h2 class="section-header "><a name="Tables"></a>Tables</h2>
+
+    <dl class="function">
     <dt>
-    <a name = "get_triangle_points"></a>
-    <strong>get_triangle_points (p1, p2, p3)</strong>
+    <a name = "apis"></a>
+    <strong>apis</strong>
     </dt>
     <dd>
-    returns all the pixels you need to draw a triangle
+    All of the additional GuiH apis loaded
 
 
-    <h3>Parameters:</h3>
+
+
+
+    <h3>See also:</h3>
     <ul>
-        <li><span class="parameter">p1</span>
-            <span class="types"><span class="type">vector</span></span>
-         first point of the triangle
-        </li>
-        <li><span class="parameter">p2</span>
-            <span class="types"><span class="type">vector</span></span>
-         second point of the triangle
-        </li>
-        <li><span class="parameter">p3</span>
-            <span class="types"><span class="type">vector</span></span>
-         third point of the triangle
-        </li>
+         <a href="../modules/modules.html#">modules</a>
     </ul>
-
-    <h3>Returns:</h3>
-    <ol>
-
-           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
-        a table of all pixels you need to draw the triangle
-    </ol>
-
-
 
 
 </dd>
     <dt>
-    <a name = "get_triangle_outline_points"></a>
-    <strong>get_triangle_outline_points (p1, p2, p3)</strong>
+    <a name = "presets"></a>
+    <strong>presets</strong>
     </dt>
     <dd>
-    returns all the pixels you need to draw outline of an triangle
+    All of the additional GuiH presets loaded
 
 
-    <h3>Parameters:</h3>
+
+
+
+    <h3>See also:</h3>
     <ul>
-        <li><span class="parameter">p1</span>
-            <span class="types"><span class="type">vector</span></span>
-         first point of the triangle
-        </li>
-        <li><span class="parameter">p2</span>
-            <span class="types"><span class="type">vector</span></span>
-         second point of the triangle
-        </li>
-        <li><span class="parameter">p3</span>
-            <span class="types"><span class="type">vector</span></span>
-         third point of the triangle
-        </li>
+         <a href="../modules/presets.html#">presets</a>
     </ul>
-
-    <h3>Returns:</h3>
-    <ol>
-
-           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
-        a table of all pixels you need to draw the triangle outline
-    </ol>
-
-
-
-
-</dd>
-    <dt>
-    <a name = "get_line_points"></a>
-    <strong>get_line_points (start_x, start_y, end_x, end_y)</strong>
-    </dt>
-    <dd>
-    returns all pixels you need to draw a line
-
-
-    <h3>Parameters:</h3>
-    <ul>
-        <li><span class="parameter">start_x</span>
-            <span class="types"><span class="type">number</span></span>
-         x coordinate of the start of the line
-        </li>
-        <li><span class="parameter">start_y</span>
-            <span class="types"><span class="type">number</span></span>
-         y coordinate of the start of the line
-        </li>
-        <li><span class="parameter">end_x</span>
-            <span class="types"><span class="type">number</span></span>
-         x coordinate of the end of the line
-        </li>
-        <li><span class="parameter">end_y</span>
-            <span class="types"><span class="type">number</span></span>
-         y coordinate of the end of the line
-        </li>
-    </ul>
-
-    <h3>Returns:</h3>
-    <ol>
-
-           <span class="types"><a class="type" href="https://www.lua.org/manual/5.1/manual.html#5.5">table</a></span>
-        a table of all pixels you need to draw the line
-    </ol>
-
-
 
 
 </dd>
