--- a/market.html
+++ b/market.html
@@ -4,7 +4,7 @@
 
 <h2>zobrazit marketinu IP</h2>
 
-<button onclick="redir()">Replace document</button>
+<button onclick="redir()">Zobrazit</button>
 
 <script>
 function redir() {
