--- a/modules/guides.html
+++ b/modules/guides.html
@@ -83,7 +83,7 @@
 <div id="content">
 
 <h1>Module <code>guides</code></h1>
-<p>bunch of guides to simple topics around the usage of GuiH</p>
+<p>bunch of guides to simple topics around the usage of GuiH.</p>
 <p></p>
     <h3>See also:</h3>
     <ul>
